# gravedigger

./: .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  font-plan.md  pyproject.toml
.github/workflows/: ci.yml
gravedigger/: __main__.py  cli.py  xbin.py
gravedigger/compression/: ega.py  huff.py  lzexe.py  pklite.py  rlew.py
gravedigger/core/: handler.py  models.py  registry.py
gravedigger/data/: __init__.py
gravedigger/handlers/: ctlpanel.py  exe_death.py  exe_text.py  intro.py  level.py  pic.py  sprites.py  tiles.py
tests/: conftest.py  test_cli.py  test_ctlpanel.py  test_data.py  test_ega.py  test_exe_death.py  test_exe_roundtrip.py  test_exe_text.py  test_handler.py  test_huff.py  test_intro.py  test_level.py  test_lzexe.py  test_models.py  test_pic.py  test_pklite.py  test_registry.py  test_rlew.py  test_roundtrip.py  test_sprites.py  test_tiles.py  test_xbin.py
